# study

./: main.cpp
attributes_before_and_after_main_functions/: main.cpp  out.txt
cast_enums_to_int/: main.cpp
client_of_multiple_servers_poll/: client.cpp
client_of_multiple_servers_select/: client.cpp
coverage_after_sigterm/: CMakeLists.txt  Readme.md  main.cpp
encodings/: CMakeLists.txt  main.cpp
endianess_simple_detector/: main.cpp
expected_variant/: CMakeLists.txt  main.cpp  visit_all.hpp
fold_expressions/: fold.cpp
forward_declaration_macro/: fwd.hpp
google_bench_simple_cmake/: CMakeLists.txt  CMakeLists.txt_old  main.cpp
has_value/: CMakeLists.txt  is_enum_present.hpp  main.cpp
inheritance_default_arguments/: out.txt
link_libraries_public_inheritance/: CMakeLists.txt  README.md  main.cpp
link_libraries_public_inheritance/libA/: CMakeLists.txt  libA.cpp
link_libraries_public_inheritance/libA/include/libA/: libA.hpp
link_libraries_public_inheritance/libB_which_uses_libA/: CMakeLists.txt  libB_which_uses_libA.cpp
link_libraries_public_inheritance/libB_which_uses_libA/include/libB_which_uses_libA/: libB_which_uses_libA.hpp
malloc_override/: CMakeLists.txt  main.cpp  malloc_overloaded.cpp
padding/: main.cpp  out.txt
program_args_outside_main/: CMakeLists.txt  main.cpp  readme.txt
protobuf_ambiguity/: CMakeLists.txt  README.md  main.cpp
protobuf_ambiguity/interface/: CMakeLists.txt
protobuf_ambiguity/interface/codec/: CMakeLists.txt  SensorInfo.cpp
protobuf_ambiguity/interface/codec/include/codec/: SensorInfo.hpp
protobuf_ambiguity/interface/protobuf/: CMakeLists.txt  sensor_data.proto
static_execution_in_another_lib/: CMakeLists.txt  README.md
static_execution_in_another_lib/my_lib/: CMakeLists.txt  component.cpp
static_initialization_in_headers/: CMakeLists.txt  Readme.md  User1.cpp  User1.h  User2.cpp  User2.h  info_data.cpp  info_data.h  main.cpp  my_enum.h  users_gernerator.py
suids/: README  main.cpp  tryEscalation.cpp
update_line_on_console/: main.cpp
zombie/: README.txt  zombie.cpp
